docs: document CI build fixes (NDK path, gradle wrapper, JDK17 jvmargs)
BUILD.md + CHANGELOG note how assembleDebug now builds in CI and that the
MAME core .so still needs a local build entry.

Generated with: Rickeal Boss (private Agent)